RESOLVED FIXED103979
[V8] V8Binding::v8ExternalString() is redundant
https://bugs.webkit.org/show_bug.cgi?id=103979
Summary [V8] V8Binding::v8ExternalString() is redundant
Kentaro Hara
Reported 2012-12-04 00:45:47 PST
v8String(), v8StringOrNull() and v8StringOrUndefined() are enough. We can remove V8Binding::v8ExternalString().
Attachments
Patch (8.79 KB, patch)
2012-12-04 00:47 PST, Kentaro Hara
no flags
Kentaro Hara
Comment 1 2012-12-04 00:47:59 PST
Adam Barth
Comment 2 2012-12-04 10:17:22 PST
Comment on attachment 177436 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=177436&action=review > Source/WebCore/bindings/v8/V8Binding.h:107 > + return str.isNull() ? v8::Handle<v8::Value>(v8::Null()) : v8::Handle<v8::Value>(v8String(str, isolate)); Shouldn't we pass the isolate to v8Null(isolate) here?
Kentaro Hara
Comment 3 2012-12-04 15:39:46 PST
(In reply to comment #2) > (From update of attachment 177436 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=177436&action=review > > > Source/WebCore/bindings/v8/V8Binding.h:107 > > + return str.isNull() ? v8::Handle<v8::Value>(v8::Null()) : v8::Handle<v8::Value>(v8String(str, isolate)); > > Shouldn't we pass the isolate to v8Null(isolate) here? Yeah, I'll fix it when I replace v8::Null(isolate) with v8Null(isolate).
WebKit Review Bot
Comment 4 2012-12-04 20:04:57 PST
Comment on attachment 177436 [details] Patch Rejecting attachment 177436 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: ripts/update-webkit line 152. Failed to run "['Tools/Scripts/update-webkit', '--chromium', '--force-update']" exit_code: 2 Updating OpenSource From http://git.chromium.org/external/Webkit 035dd10..6502679 HEAD -> origin/HEAD error: Ref refs/remotes/origin/master is at 6502679cc4e791c06a9f646d2448d49b53086645 but expected 035dd105cd1e6e7b8fc205519a1d095e9c4b4b20 ! 035dd10..6502679 master -> origin/master (unable to update local ref) Died at Tools/Scripts/update-webkit line 152. Full output: http://queues.webkit.org/results/15159076
Adam Barth
Comment 5 2012-12-04 20:11:32 PST
Comment on attachment 177436 [details] Patch Sorry. I switched the bot to git.webkit.org. Hopefully that will help.
WebKit Review Bot
Comment 6 2012-12-04 20:26:46 PST
Comment on attachment 177436 [details] Patch Clearing flags on attachment: 177436 Committed r136623: <http://trac.webkit.org/changeset/136623>
WebKit Review Bot
Comment 7 2012-12-04 20:26:50 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.