[V8] V8Binding::v8ExternalString() is redundant https://bugs.webkit.org/show_bug.cgi?id=103979

Reviewed by Adam Barth.

v8String(), v8StringOrNull() and v8StringOrUndefined() are enough.
We can remove V8Binding::v8ExternalString().

No tests. No change in behavior.

* bindings/scripts/CodeGeneratorV8.pm:
(GenerateNormalAttrGetter):
* bindings/v8/ScriptController.cpp:
(WebCore::ScriptController::compileAndRunScript):
* bindings/v8/ScriptDebugServer.cpp:
(WebCore::ScriptDebugServer::compileScript):
* bindings/v8/V8Binding.h:
(WebCore):
(WebCore::v8String):
(WebCore::v8StringOrNull):
(WebCore::v8StringOrUndefined):
* bindings/v8/V8LazyEventListener.cpp:
(WebCore::V8LazyEventListener::prepareListenerObject):
* bindings/v8/WorkerScriptController.cpp:
(WebCore::WorkerScriptController::evaluate):


Canonical link: https://commits.webkit.org/122205@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136623 268f45cc-cd09-0410-ab3c-d52691b4dbfc